<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Persistent</string>
    <string name="title_section1">Events</string>
    <string name="title_section2">Locations</string>
    <string name="title_section3">People</string>
    <string name="title_section4">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_create_event">Create Event</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Sign Out</string>
    <string name="action_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="event_name_hint">Event Name</string>
    <string name="profile_namefield">Name</string>
    <string name="profile_passwordfield">Password</string>
    <string name="profile_password">********</string>
    <string name="profile_email">Email</string>
    <string name="change_name">Change Name</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="error_invalid_name">Invalid Name</string>
    <string name="error_password_failed">Failed to update password</string>
    <string name="password_success">Password updated</string>
    <string name="error_save_image">Image could not be saved</string>
    <string name="register_success">Registration successful</string>
    <string name="register_failed">Registration failed</string>
    <string name="title_activity_create_new_event">CreateNewEventActivity</string>
    <string name="event_name_field">Event name</string>
    <string name="event_type">Event type</string>
    <string name="from_text_view">From</string>
    <string name="to_text_view">To</string>
    <string name="date_text_view">Date</string>
    <string name="event_description_field">Event description</string>
    <string name="nr_of_participants_field">Number of participants</string>
    <string name="min_text_view">Min</string>
    <string name="max_text_view">Max</string>
    <string name="more_details">More Details</string>
    <string name="people">People Currently Signed up</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_filter">Search Filters</string>
    <string name="create">Create</string>
    <string name="sign_up_confirmation">Are you sure you want to sign up for this event?</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out of this event?</string>
    <string name="done">Return</string>
    <string name="title_activity_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile_pic">Profile picture</string>
	<string name="is_thales">Is Thales</string>
</resources>
